hphp/hack/test/typecheck/error_messages/inc_dynamic.php.exp
File "inc_dynamic.php", line 4, characters 10-13:
Invalid return type (Typing[4110])
  File "inc_dynamic.php", line 3, characters 27-32:
  This is a string
  File "inc_dynamic.php", line 4, characters 10-13:
  It is incompatible with a dynamic value because this is the result of an increment/decrement of an argument typed dynamic
