hphp/hack/test/typecheck/error_messages/inc_dynamic.php
<?hh

function foo(dynamic $d): string {
  return ++$d;
}
